--- a/pyg/views/index.html
+++ b/pyg/views/index.html
@@ -6,11 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 	<title>品优购，优质！优质！</title>
 
-    <link rel="stylesheet" type="text/css" href="../static/css/all.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/pages-JD-index.css" />
+    <link rel="stylesheet" type="text/css" href="css/all.css" />
+    <link rel="stylesheet" type="text/css" href="css/pages-JD-index.css" />
 
-	<script type="text/javascript" src="../static/js/all.js"></script>
-	<script type="text/javascript" src="../static/js/index.js"></script>
+	<script type="text/javascript" src="js/all.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </head>
 
 <body>
@@ -501,17 +501,17 @@
 					<div class="carousel-inner">
 						<div class="active item">
 							<a href="http://baidu2.wypxj.com/">
-					    	<img src="../static/images/banner1.jpg"  />
+					    	<img src="images/banner1.jpg"  />
 					      </a>
 						</div>
 						<div class="item">
 							<a href="http://baidu2.wypxj.com/">
-						<img src="../static/images/banner2.jpg"  />
+						<img src="images/banner2.jpg"  />
 					     </a>
 						</div>
 						<div class="item">
 							<a href="http://baidu2.wypxj.com/">
-						<img src="../static/images/banner3.jpg"  />
+						<img src="images/banner3.jpg"  />
 						</a>
 
 						</div>
@@ -610,7 +610,7 @@
 					</div>
 				</div>
 				<div class="ads">
-					<img src="../static/images/ad1.png" />
+					<img src="images/ad1.png" />
 				</div>
 			</div>
 		</div>
@@ -621,21 +621,21 @@
 			<ul class="yui3-g Recommend">
 				<li class="yui3-u-1-6  clock">
 					<div class="time">
-						<img src="../static/images/clock.png" />
+						<img src="images/clock.png" />
 						<h3>今日推荐</h3>
 					</div>
 				</li>
 				<li class="yui3-u-5-24">
-					<a href="list.html" target="_blank"><img src="../static/images/today01.png" /></a>
+					<a href="list.html" target="_blank"><img src="images/today01.png" /></a>
 				</li>
 				<li class="yui3-u-5-24">
-					<img src="../static/images/today02.png" />
+					<img src="images/today02.png" />
 				</li>
 				<li class="yui3-u-5-24">
-					<img src="../static/images/today03.png" />
+					<img src="images/today03.png" />
 				</li>
 				<li class="yui3-u-5-24">
-					<img src="../static/images/today04.png" />
+					<img src="images/today04.png" />
 				</li>
 			</ul>
 		</div>
@@ -664,7 +664,7 @@
 				<li style="display:block;">
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -675,7 +675,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -686,7 +686,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -697,7 +697,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -710,7 +710,7 @@
 				<li>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/2.jpg"/></a></span>
+							<span><a href="#"><img src="images/2.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -721,7 +721,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -732,7 +732,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -743,7 +743,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/2.jpg"/></a></span>
+							<span><a href="#"><img src="images/2.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -757,7 +757,7 @@
 				<li>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -768,7 +768,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -779,7 +779,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -790,7 +790,7 @@
 					</div>
 					<div class="img-item">
 						<p class="tab-pic">
-							<span><a href="#"><img src="../static/images/1.jpg"/></a></span>
+							<span><a href="#"><img src="images/1.jpg"/></a></span>
 						</p>
 						<div class="tab-info">
 							<div class="info-title">
@@ -817,14 +817,14 @@
 					<li class="yui3-u-1-6">
 						<dl class="picDl huozhe">
 							<dd>
-								<a href="" class="pic"><img src="../static/images/like_02.png" alt="" /></a>
+								<a href="" class="pic"><img src="images/like_02.png" alt="" /></a>
 								<div class="like-text">
 									<p>阳光美包新款单肩包女包时尚子母包四件套女</p>
 									<h3>¥116.00</h3>
 								</div>
 							</dd>
 							<dd>
-								<a href="" class="pic"><img src="../static/images/like_01.png" alt="" /></a>
+								<a href="" class="pic"><img src="images/like_01.png" alt="" /></a>
 								<div class="like-text">
 									<p>爱仕达 30CM炒锅不粘锅NWG8330E电磁炉炒</p>
 									<h3>¥116.00</h3>
@@ -835,14 +835,14 @@
 					<li class="yui3-u-1-6">
 						<dl class="picDl jilu">
 							<dd>
-								<a href="" class="pic"><img src="../static/images/like_03.png" alt="" /></a>
+								<a href="" class="pic"><img src="images/like_03.png" alt="" /></a>
 								<div class="like-text">
 									<p>爱仕达 30CM炒锅不粘锅NWG8330E电磁炉炒</p>
 									<h3>¥116.00</h3>
 								</div>
 							</dd>
 							<dd>
-								<a href="" class="pic"><img src="../static/images/like_02.png" alt="" /></a>
+								<a href="" class="pic"><img src="images/like_02.png" alt="" /></a>
 								<div class="like-text">
 									<p>阳光美包新款单肩包女包时尚子母包四件套女</p>
 									<h3>¥116.00</h3>
@@ -853,7 +853,7 @@
 					<li class="yui3-u-1-6">
 						<dl class="picDl tuhua">
 							<dd>
-								<a href="" class="pic"><img src="../static/images/like_01.png" alt="" /></a>
+								<a href="" class="pic"><img src="images/like_01.png" alt="" /></a>
 								<div class="like-text">
 									<p>捷波朗 </p>
 									<p>（jabra）BOOSI劲步</p>
@@ -873,14 +873,14 @@
 					<li class="yui3-u-1-6">
 						<dl class="picDl huozhe">
 							<dd>
-								<a href="" class="pic"><img src="../static/images/like_02.png" alt="" /></a>
+								<a href="" class="pic"><img src="images/like_02.png" alt="" /></a>
 								<div class="like-text">
 									<p>阳光美包新款单肩包女包时尚子母包四件套女</p>
 									<h3>¥116.00</h3>
 								</div>
 							</dd>
 							<dd>
-								<a href="" class="pic"><img src="../static/images/like_01.png" alt="" /></a>
+								<a href="" class="pic"><img src="images/like_01.png" alt="" /></a>
 								<div class="like-text">
 									<p>爱仕达 30CM炒锅不粘锅NWG8330E电磁炉炒</p>
 									<h3>¥116.00</h3>
@@ -891,7 +891,7 @@
 					<li class="yui3-u-1-6">
 						<dl class="picDl jilu">
 							<dd>
-								<a href="http://sc.chinaz.com/" class="pic"><img src="../static/images/like_03.png" alt="" /></a>
+								<a href="http://sc.chinaz.com/" class="pic"><img src="images/like_03.png" alt="" /></a>
 								<div class="like-text">
 									<p>捷波朗 </p>
 									<p>（jabra）BOOSI劲步</p>
@@ -899,7 +899,7 @@
 								</div>
 							</dd>
 							<dd>
-								<a href="http://sc.chinaz.com/" class="pic"><img src="../static/images/like_02.png" alt="" /></a>
+								<a href="http://sc.chinaz.com/" class="pic"><img src="images/like_02.png" alt="" /></a>
 								<div class="like-text">
 									<p>欧普</p>
 									<p>JYLZ08面板灯平板灯铝</p>
@@ -911,7 +911,7 @@
 					<li class="yui3-u-1-6">
 						<dl class="picDl tuhua">
 							<dd>
-								<a href="http://sc.chinaz.com/" class="pic"><img src="../static/images/like_01.png" alt="" /></a>
+								<a href="http://sc.chinaz.com/" class="pic"><img src="images/like_01.png" alt="" /></a>
 								<div class="like-text">
 									<p>三星（G5500）</p>
 									<p>移动联通双网通</p>
@@ -940,42 +940,42 @@
 			<div class="clearfix yui3-g Interest">
 				<span class="x-line"></span>
 				<div class="yui3-u row-405 Interest-conver">
-					<img src="../static/images/interest01.png" />
+					<img src="images/interest01.png" />
 				</div>
 				<div class="yui3-u row-225 Interest-conver-split">
 					<h5>好东西</h5>
-					<img src="../static/images/interest02.png" />
-					<img src="../static/images/interest03.png" />
+					<img src="images/interest02.png" />
+					<img src="images/interest03.png" />
 				</div>
 				<div class="yui3-u row-405 Interest-conver-split blockgary">
 					<h5>品牌街</h5>
 					<div class="split-bt">
-						<img src="../static/images/interest04.png" />
+						<img src="images/interest04.png" />
 					</div>
 					<div class="x-img fl">
-						<img src="../static/images/interest05.png" />
+						<img src="images/interest05.png" />
 					</div>
 					<div class="x-img fr">
-						<img src="../static/images/interest06.png" />
+						<img src="images/interest06.png" />
 					</div>
 				</div>
 				<div class="yui3-u row-165 brandArea">
 					<span class="brand-yline"></span>
 					<ul class="yui3-g brand-list">
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand01.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand02.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand03.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand04.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand05.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand06.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand07.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand08.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand09.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand10.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand11.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand12.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand13.png" /></li>
-						<li class="yui3-u-1-2 brand-pit"><img src="../static/images/brand03.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand01.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand02.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand03.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand04.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand05.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand06.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand07.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand08.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand09.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand10.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand11.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand12.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand13.png" /></li>
+						<li class="yui3-u-1-2 brand-pit"><img src="images/brand03.png" /></li>
 					</ul>
 				</div>
 			</div>
@@ -1024,7 +1024,7 @@
 								<li>滚筒洗衣机</li>
 								<li>电热水器</li>
 							</ul>
-							<img src="../static/images/floor-1-1.png" />
+							<img src="images/floor-1-1.png" />
 						</div>
 						<div class="yui3-u row-330 floorBanner">
 							<div id="floorCarousel" data-ride="carousel" data-interval="4000" class="sui-carousel slide">
@@ -1035,13 +1035,13 @@
 								</ol>
 								<div class="carousel-inner">
 									<div class="active item">
-										<img src="../static/images/floor-1-b01.png">
+										<img src="images/floor-1-b01.png">
 									</div>
 									<div class="item">
-										<img src="../static/images/floor-1-b02.png">
+										<img src="images/floor-1-b02.png">
 									</div>
 									<div class="item">
-										<img src="../static/images/floor-1-b03.png">
+										<img src="images/floor-1-b03.png">
 									</div>
 								</div>
 								<a href="#floorCarousel" data-slide="prev" class="carousel-control left">‹</a>
@@ -1051,22 +1051,22 @@
 						<div class="yui3-u row-220 split">
 							<span class="floor-x-line"></span>
 							<div class="floor-conver-pit">
-								<img src="../static/images/floor-1-2.png" />
+								<img src="images/floor-1-2.png" />
 							</div>
 							<div class="floor-conver-pit">
-								<img src="../static/images/floor-1-3.png" />
+								<img src="images/floor-1-3.png" />
 							</div>
 						</div>
 						<div class="yui3-u row-218 split">
-							<img src="../static/images/floor-1-4.png" />
+							<img src="images/floor-1-4.png" />
 						</div>
 						<div class="yui3-u row-220 split">
 							<span class="floor-x-line"></span>
 							<div class="floor-conver-pit">
-								<img src="../static/images/floor-1-5.png" />
+								<img src="images/floor-1-5.png" />
 							</div>
 							<div class="floor-conver-pit">
-								<img src="../static/images/floor-1-6.png" />
+								<img src="images/floor-1-6.png" />
 							</div>
 						</div>
 					</div>
@@ -1134,7 +1134,7 @@
 								<li>滚筒洗衣机</li>
 								<li>电热水器</li>
 							</ul>
-							<img src="../static/images/floor-1-1.png" />
+							<img src="images/floor-1-1.png" />
 						</div>
 						<div class="yui3-u row-330 floorBanner">
 							<div id="floorCarousell" data-ride="carousel" data-interval="4000" class="sui-carousel slide">
@@ -1145,13 +1145,13 @@
 								</ol>
 								<div class="carousel-inner">
 									<div class="active item">
-										<img src="../static/images/floor-1-b01.png">
+										<img src="images/floor-1-b01.png">
 									</div>
 									<div class="item">
-										<img src="../static/images/floor-1-b02.png">
+										<img src="images/floor-1-b02.png">
 									</div>
 									<div class="item">
-										<img src="../static/images/floor-1-b03.png">
+										<img src="images/floor-1-b03.png">
 									</div>
 								</div>
 								<a href="#floorCarousell" data-slide="prev" class="carousel-control left">‹</a>
@@ -1161,22 +1161,22 @@
 						<div class="yui3-u row-220 split">
 							<span class="floor-x-line"></span>
 							<div class="floor-conver-pit">
-								<img src="../static/images/floor-1-2.png" />
+								<img src="images/floor-1-2.png" />
 							</div>
 							<div class="floor-conver-pit">
-								<img src="../static/images/floor-1-3.png" />
+								<img src="images/floor-1-3.png" />
 							</div>
 						</div>
 						<div class="yui3-u row-218 split">
-							<img src="../static/images/floor-1-4.png" />
+							<img src="images/floor-1-4.png" />
 						</div>
 						<div class="yui3-u row-220 split">
 							<span class="floor-x-line"></span>
 							<div class="floor-conver-pit">
-								<img src="../static/images/floor-1-5.png" />
+								<img src="images/floor-1-5.png" />
 							</div>
 							<div class="floor-conver-pit">
-								<img src="../static/images/floor-1-6.png" />
+								<img src="images/floor-1-6.png" />
 							</div>
 						</div>
 					</div>
@@ -1210,17 +1210,17 @@
 		<div class="py-container">
 			<ul class="Brand-list blockgary">
 				<li class="Brand-item">
-					<img src="../static/images/brand_21.png" />
+					<img src="images/brand_21.png" />
 				</li>
-				<li class="Brand-item"><img src="../static/images/brand_03.png" /></li>
-				<li class="Brand-item"><img src="../static/images/brand_05.png" /></li>
-				<li class="Brand-item"><img src="../static/images/brand_07.png" /></li>
-				<li class="Brand-item"><img src="../static/images/brand_09.png" /></li>
-				<li class="Brand-item"><img src="../static/images/brand_11.png" /></li>
-				<li class="Brand-item"><img src="../static/images/brand_13.png" /></li>
-				<li class="Brand-item"><img src="../static/images/brand_15.png" /></li>
-				<li class="Brand-item"><img src="../static/images/brand_17.png" /></li>
-				<li class="Brand-item"><img src="../static/images/brand_19.png" /></li>
+				<li class="Brand-item"><img src="images/brand_03.png" /></li>
+				<li class="Brand-item"><img src="images/brand_05.png" /></li>
+				<li class="Brand-item"><img src="images/brand_07.png" /></li>
+				<li class="Brand-item"><img src="images/brand_09.png" /></li>
+				<li class="Brand-item"><img src="images/brand_11.png" /></li>
+				<li class="Brand-item"><img src="images/brand_13.png" /></li>
+				<li class="Brand-item"><img src="images/brand_15.png" /></li>
+				<li class="Brand-item"><img src="images/brand_17.png" /></li>
+				<li class="Brand-item"><img src="images/brand_19.png" /></li>
 			</ul>
 		</div>
 	</div>
@@ -1359,7 +1359,7 @@
 						</div>
 						<div class="yui3-u-1-6">
 							<h4>帮助中心</h4>
-							<img src="../static/images/wx_cz.jpg">
+							<img src="images/wx_cz.jpg">
 						</div>
 					</div>
 				</div>
