--- a/pyg/views/login.html
+++ b/pyg/views/login.html
@@ -7,12 +7,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 	<title>品优购，欢迎登录</title>
 
-	<link rel="stylesheet" type="text/css" href="../static/css/all.css" />
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css" />
-	<link rel="stylesheet" type="text/css" href="../static/css/pages-login.css" />
+	<link rel="stylesheet" type="text/css" href="css/all.css" />
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/pages-login.css" />
 
-	<script type="text/javascript" src="../static/js/all.js"></script>
-	<script type="text/javascript" src="../static/js/login.js"></script>
+	<script type="text/javascript" src="js/all.js"></script>
+	<script type="text/javascript" src="js/login.js"></script>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
 					<div class="tab-content tab-wraped">
 						<div id="index" class="tab-pane">
 							<p>二维码登录，暂为官网二维码</p>
-							<img src="../static/images/wx_cz.jpg" />
+							<img src="images/wx_cz.jpg" />
 						</div>
 						<div id="profile" class="tab-pane  active">
 							<form class="sui-form">
@@ -64,10 +64,10 @@
 							<div class="otherlogin">
 								<div class="types">
 									<ul>
-										<li><img src="../static/images/qq.png" width="35px" height="35px" /></li>
-										<li><img src="../static/images/sina.png" /></li>
-										<li><img src="../static/images/ali.png" /></li>
-										<li><img src="../static/images/weixin.png" /></li>
+										<li><img src="images/qq.png" width="35px" height="35px" /></li>
+										<li><img src="images/sina.png" /></li>
+										<li><img src="images/ali.png" /></li>
+										<li><img src="images/weixin.png" /></li>
 									</ul>
 								</div>
 								<span class="register"><a href="register.html" target="_blank">立即注册</a></span>
