--- a/pyg/views/cart.html
+++ b/pyg/views/cart.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>品优购，优质！优质！-购物车</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<div class="header_con">
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="../static/images/logo.png"></a>
+		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;购物车</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -51,7 +51,7 @@
 	</ul>
 	<ul class="cart_list_td clearfix">
 		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="../static/images/goods/goods012.jpg"></li>
+		<li class="col02"><img src="images/goods/goods012.jpg"></li>
 		<li class="col03">奇异果<br><em>25.80元/500g</em></li>
 		<li class="col04">500g</li>
 		<li class="col05">25.80元</li>
@@ -68,7 +68,7 @@
 
 	<ul class="cart_list_td clearfix">
 		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="../static/images/goods/goods003.jpg"></li>
+		<li class="col02"><img src="images/goods/goods003.jpg"></li>
 		<li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
 		<li class="col04">500g</li>
 		<li class="col05">16.80元</li>
