--- a/pyg/views/list.html
+++ b/pyg/views/list.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>品优购，优质！优质！-商品列表</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<div class="header_con">
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="../static/images/logo.png"></a>
+		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
 		<div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			<input type="button" class="input_btn fr" name="" value="搜索">
@@ -79,12 +79,12 @@
 				<h3>新品推荐</h3>
 				<ul>
 					<li>
-						<a href="#"><img src="../static/images/goods/goods001.jpg"></a>
+						<a href="#"><img src="images/goods/goods001.jpg"></a>
 						<h4><a href="#">进口柠檬</a></h4>
 						<div class="prize">￥3.90</div>
 					</li>
 					<li>
-						<a href="#"><img src="../static/images/goods/goods002.jpg"></a>
+						<a href="#"><img src="images/goods/goods002.jpg"></a>
 						<h4><a href="#">玫瑰香葡萄</a></h4>
 						<div class="prize">￥16.80</div>
 					</li>
@@ -101,7 +101,7 @@
 
 			<ul class="goods_type_list clearfix">
 				<li>
-					<a href="detail.html"><img src="../static/images/goods/goods003.jpg"></a>
+					<a href="detail.html"><img src="images/goods/goods003.jpg"></a>
 					<h4><a href="detail.html">大兴大棚草莓</a></h4>
 					<div class="operate">
 						<span class="prize">￥16.80</span>
@@ -111,7 +111,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods004.jpg"></a>
+					<a href="#"><img src="images/goods/goods004.jpg"></a>
 					<h4><a href="#">吐鲁番梨光杏</a></h4>
 					<div class="operate">
 						<span class="prize">￥5.50</span>
@@ -121,7 +121,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods005.jpg"></a>
+					<a href="#"><img src="images/goods/goods005.jpg"></a>
 					<h4><a href="#">黄肉桃</a></h4>
 					<div class="operate">
 						<span class="prize">￥10.00</span>
@@ -131,7 +131,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods006.jpg"></a>
+					<a href="#"><img src="images/goods/goods006.jpg"></a>
 					<h4><a href="#">进口西梅</a></h4>
 					<div class="operate">
 						<span class="prize">￥28.80</span>
@@ -141,7 +141,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods007.jpg"></a>
+					<a href="#"><img src="images/goods/goods007.jpg"></a>
 					<h4><a href="#">香梨</a></h4>
 					<div class="operate">
 						<span class="prize">￥6.45</span>
@@ -151,7 +151,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods008.jpg"></a>
+					<a href="#"><img src="images/goods/goods008.jpg"></a>
 					<h4><a href="#">栗子</a></h4>
 					<div class="operate">
 						<span class="prize">￥9.50</span>
@@ -161,7 +161,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods009.jpg"></a>
+					<a href="#"><img src="images/goods/goods009.jpg"></a>
 					<h4><a href="#">海南香蕉</a></h4>
 					<div class="operate">
 						<span class="prize">￥3.30</span>
@@ -171,7 +171,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods010.jpg"></a>
+					<a href="#"><img src="images/goods/goods010.jpg"></a>
 					<h4><a href="#">青苹果</a></h4>
 					<div class="operate">
 						<span class="prize">￥5.00</span>
@@ -181,7 +181,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods011.jpg"></a>
+					<a href="#"><img src="images/goods/goods011.jpg"></a>
 					<h4><a href="#">山莓</a></h4>
 					<div class="operate">
 						<span class="prize">￥28.80</span>
@@ -191,7 +191,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods012.jpg"></a>
+					<a href="#"><img src="images/goods/goods012.jpg"></a>
 					<h4><a href="#">奇异果</a></h4>
 					<div class="operate">
 						<span class="prize">￥25.80</span>
@@ -200,7 +200,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="#"><img src="../static/images/goods/goods013.jpg"></a>
+					<a href="#"><img src="images/goods/goods013.jpg"></a>
 					<h4><a href="#">蜜桔</a></h4>
 					<div class="operate">
 						<span class="prize">￥4.80</span>
@@ -209,7 +209,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="#"><img src="../static/images/goods/goods014.jpg"></a>
+					<a href="#"><img src="images/goods/goods014.jpg"></a>
 					<h4><a href="#">脐橙</a></h4>
 					<div class="operate">
 						<span class="prize">￥3.50</span>
@@ -218,7 +218,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="#"><img src="../static/images/goods/goods001.jpg"></a>
+					<a href="#"><img src="images/goods/goods001.jpg"></a>
 					<h4><a href="#">进口柠檬</a></h4>
 					<div class="operate">
 						<span class="prize">￥3.90</span>
@@ -227,7 +227,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="#"><img src="../static/images/goods/goods002.jpg"></a>
+					<a href="#"><img src="images/goods/goods002.jpg"></a>
 					<h4><a href="#">玫瑰香葡萄</a></h4>
 					<div class="operate">
 						<span class="prize">￥16.80</span>
