--- a/pyg/views/register-email.html
+++ b/pyg/views/register-email.html
@@ -7,11 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 	<title>个人注册</title>
 
-    <link rel="stylesheet" type="text/css" href="../static/css/all.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/all.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
     
-	<script type="text/javascript" src="../static/js/all.js"></script>
-	<script type="text/javascript" src="../static/js/register.js"></script>
+	<script type="text/javascript" src="/static/js/all.js"></script>
+	<script type="text/javascript" src="/static/js/register.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 		<div class="registerArea">
 			<h3>注册新用户<span class="go">我有账号，去<a href="login.html" target="_blank">登陆</a></span></h3>
 			<div class="info">
-				<form class="sui-form form-horizontal" action="" method="post">
+				<form class="sui-form form-horizontal" action="/register-email" method="post">
 					<div class="control-group">
 						<label class="control-label">邮箱：</label>
 						<div class="controls">
@@ -53,7 +53,7 @@
 					<div class="control-group">
 						<label class="control-label"></label>
 						<div class="controls btn-reg">
-							<a class="sui-btn btn-block btn-xlarge btn-danger reg-btn" href="javascript:;" target="_blank">完成注册</a>
+                            <input type="submit" class="sui-btn btn-block btn-xlarge btn-danger reg-btn" value="完成注册">
 						</div>
 					</div>
 				</form>
