--- a/pyg/views/register.html
+++ b/pyg/views/register.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 	<title>个人注册</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/all.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css" />
-	<script type="text/javascript" src="../static/js/all.js"></script>
-	<script type="text/javascript" src="../static/js/register.js"></script>
+	<link rel="stylesheet" type="text/css" href="/static/css/all.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+	<script type="text/javascript" src="/static/js/all.js"></script>
+	<script type="text/javascript" src="/static/js/register.js"></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 		<div class="registerArea">
 			<h3>注册新用户<span class="go">我有账号，去<a href="login.html" target="_blank">登陆</a></span></h3>
 			<div class="info">
-				<form action="" method="post" id="reg_form" class="sui-form form-horizontal">
+				<form action="/register" method="post" id="reg_form" class="sui-form form-horizontal">
 					<div class="control-group">
 						<label class="control-label">手机号：</label>
 						<div class="controls">
@@ -61,7 +61,7 @@
 					<div class="control-group">
 						<label class="control-label"></label>
 						<div class="controls btn-reg">
-							<a id="reg_btn" class="sui-btn btn-block btn-xlarge btn-danger reg-btn" href="javascript:;">完成注册</a>
+							<input type="submit" class="sui-btn btn-block btn-xlarge btn-danger reg-btn" value="完成注册">
 						</div>
 					</div>
 				</form>
@@ -88,6 +88,8 @@
 	<script type="text/javascript">
 	//页面加载事件
 		$(function(){
+		    var vcode = ''
+
 			$('#dyMobileButton').click(function(){
 				//获取手机输入框的值
 				var phone = $('#phone').val();
@@ -101,9 +103,9 @@
 				}else{
 					$('#phone').next().html('');
 				}
-				var time = 5;
-				// $('#dyMobileButton').html('重新发送' + time + 's');
-				// $('#dyMobileButton').attr('disabled',true);
+				var time = 60;
+				$('#dyMobileButton').html('重新发送' + time + 's');
+				$('#dyMobileButton').attr('disabled',true);
 				var fn = function(){
 					time--;
 					if(time > 0){
@@ -116,7 +118,30 @@
 				};
 				fn();
 				var interval = setInterval(fn,1000);
+
+				param = {"phone":phone}
+				//通过ajax发送请求  url  传送的数据   回调函数
+				$.post("/sendMsg",param,function (data) {
+					if(data.errno != 5){
+					    alert(data.errmsg)
+					}else{
+					    vcode = data.code
+					    alert("数据传输成功")
+					}
+                })
 			});
+
+			$('#code').blur(function () {
+				//验证输入的验证码是否是发送的验证码
+				code = $(this).val()
+				if(code != vcode){
+                    $('#dyMobileButton').next().html('验证码错误，请重新输入!')
+				}else {
+                    $('#dyMobileButton').next().html('')
+
+                }
+
+            })
 		});
 		
 	</script>
