--- a/pyg/views/user_center_info.html
+++ b/pyg/views/user_center_info.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>品优购，优质！优质！-用户中心</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<div class="header_con">
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="../static/images/logo.png"></a>
+		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -63,7 +63,7 @@
 				<div class="has_view_list">
 					<ul class="goods_type_list clearfix">
 				<li>
-					<a href="detail.html"><img src="../static/images/goods/goods003.jpg"></a>
+					<a href="detail.html"><img src="images/goods/goods003.jpg"></a>
 					<h4><a href="detail.html">大兴大棚草莓</a></h4>
 					<div class="operate">
 						<span class="prize">￥16.80</span>
@@ -73,7 +73,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods004.jpg"></a>
+					<a href="#"><img src="images/goods/goods004.jpg"></a>
 					<h4><a href="#">吐鲁番梨光杏</a></h4>
 					<div class="operate">
 						<span class="prize">￥5.50</span>
@@ -83,7 +83,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods005.jpg"></a>
+					<a href="#"><img src="images/goods/goods005.jpg"></a>
 					<h4><a href="#">黄肉桃</a></h4>
 					<div class="operate">
 						<span class="prize">￥10.00</span>
@@ -93,7 +93,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods006.jpg"></a>
+					<a href="#"><img src="images/goods/goods006.jpg"></a>
 					<h4><a href="#">进口西梅</a></h4>
 					<div class="operate">
 						<span class="prize">￥28.80</span>
@@ -103,7 +103,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="../static/images/goods/goods007.jpg"></a>
+					<a href="#"><img src="images/goods/goods007.jpg"></a>
 					<h4><a href="#">香梨</a></h4>
 					<div class="operate">
 						<span class="prize">￥6.45</span>
