--- a/pyg/views/login.html
+++ b/pyg/views/login.html
@@ -7,12 +7,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 	<title>品优购，欢迎登录</title>
 
-	<link rel="stylesheet" type="text/css" href="css/all.css" />
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
-	<link rel="stylesheet" type="text/css" href="css/pages-login.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/all.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/pages-login.css" />
 
-	<script type="text/javascript" src="js/all.js"></script>
-	<script type="text/javascript" src="js/login.js"></script>
+	<script type="text/javascript" src="/static/js/all.js"></script>
+	<script type="text/javascript" src="/static/js/login.js"></script>
 </head>
 
 <body>
@@ -40,39 +40,40 @@
 					<div class="tab-content tab-wraped">
 						<div id="index" class="tab-pane">
 							<p>二维码登录，暂为官网二维码</p>
-							<img src="images/wx_cz.jpg" />
+							<img src="/static/images/wx_cz.jpg" />
 						</div>
 						<div id="profile" class="tab-pane  active">
-							<form class="sui-form">
+							<form class="sui-form" method="post" action="/login">
 								<div class="input-prepend"><span class="add-on loginname"></span>
-									<input id="prependedInput" type="text" placeholder="邮箱/用户名/手机号" class="span2 input-xfat">
+									<input id="prependedInput" type="text" name="name" placeholder="邮箱/用户名/手机号" value="{{.name}}" class="span2 input-xfat">
 								</div>
 								<div class="input-prepend"><span class="add-on loginpwd"></span>
-									<input id="prependedInput" type="password" placeholder="请输入密码" class="span2 input-xfat">
+									<input id="prependedInput" type="password" name="pwd" placeholder="请输入密码" class="span2 input-xfat">
 								</div>
 								<div class="setting">
 									<label class="checkbox inline">
-										<input name="m1" type="checkbox" value="2" checked="">
-										自动登录
+										<input name="m1" type="checkbox" value="2" checked="{{.checked}}">
+										记住用户名
 									</label>
 									<span class="forget">忘记密码？</span>
 								</div>
 								<div class="logined">
-									<a class="sui-btn btn-block btn-xlarge btn-danger" href="home.html" target="_blank">登&nbsp;&nbsp;录</a>
+                                    <input class="sui-btn btn-block btn-xlarge btn-danger" type="submit" value="登      录">
 								</div>
 							</form>
 							<div class="otherlogin">
 								<div class="types">
 									<ul>
-										<li><img src="images/qq.png" width="35px" height="35px" /></li>
-										<li><img src="images/sina.png" /></li>
-										<li><img src="images/ali.png" /></li>
-										<li><img src="images/weixin.png" /></li>
+										<li><img src="/static/images/qq.png" width="35px" height="35px" /></li>
+										<li><img src="/static/images/sina.png" /></li>
+										<li><img src="/static/images/ali.png" /></li>
+										<li><img src="/static/images/weixin.png" /></li>
 									</ul>
 								</div>
 								<span class="register"><a href="register.html" target="_blank">立即注册</a></span>
 							</div>
 						</div>
+                        {{.errmsg}}
 					</div>
 				</div>
 			</div>
