--- a/pyg/views/cart.html
+++ b/pyg/views/cart.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>品优购，优质！优质！-购物车</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 </head>
 <body>
 	<div class="header_con">
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
+		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;购物车</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -49,48 +49,34 @@
 		<li class="col05">小计</li>
 		<li class="col06">操作</li>
 	</ul>
+	<form action="/user/addOrder" method="post">
+	{{range .goods}}
 	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="images/goods/goods012.jpg"></li>
-		<li class="col03">奇异果<br><em>25.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">25.80元</li>
+		<li class="col01"><input type="checkbox" class="checkGoods" name="checkGoods" checked value="{{.goodsSku.Id}}"></li>
+		<li class="col02"><img src="http://192.168.179.65:8888/{{.goodsSku.Image}}"></li>
+		<li class="col03">{{.goodsSku.Name}}<br><em>{{.goodsSku.Price}}元/{{.goodsSku.Unite}}</em></li>
+		<li class="col04">{{.goodsSku.Unite}}</li>
+		<li class="col05">{{.goodsSku.Price}}元</li>
 		<li class="col06">
 			<div class="num_add">
 				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
+				<input type="text" class="num_show fl" value="{{.count}}" goodsId="{{.goodsSku.Id}}">
 				<a href="javascript:;" class="minus fl">-</a>	
 			</div>
 		</li>
-		<li class="col07">25.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
+		<li class="col07">{{.littlePrice}}元</li>
+		<li class="col08"><a href="javascript:;" class="delete">删除</a></li>
 	</ul>
 
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="images/goods/goods003.jpg"></li>
-		<li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">16.80元</li>
-		<li class="col06">
-			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
-				<a href="javascript:;" class="minus fl">-</a>	
-			</div>
-		</li>
-		<li class="col07">16.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
-	</ul>
-	
+	{{end}}
 
 	<ul class="settlements">
-		<li class="col01"><input type="checkbox" name="" checked=""></li>
+		<li class="col01"><input type="checkbox" name="" checked="" id="allCheck"></li>
 		<li class="col02">全选</li>
-		<li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
-		<li class="col04"><a href="place_order.html">去结算</a></li>
+		<li class="col03">合计(不含运费)：<span>¥</span><em>{{.totalPrice}}</em><br>共计<b>{{.totalCount}}</b>件商品</li>
+		<li class="col04"><input type="submit" value="去结算"/></li>
 	</ul>
-
+    </form>
 	<div class="py-container copyright footer">
 		<ul>
 			<li>关于我们</li>
@@ -106,6 +92,185 @@
 		<div class="beian">京ICP备08001421号京公网安备110108007702
 		</div>
 	</div>
+<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
+<script type="text/javascript">
+
+	//全选设置
+	$('#allCheck').change(function () {
+		//如果改变，把上面的所有复选框设置为和当前复选框一个状态  prop   attr
+		checked = $(this).prop("checked")
+		//获取上面所有复选框
+		$('.cart_list_td').find(":checkbox").each(function () {
+            $(this).prop("checked",checked)
+                })
+
+		//计算总价
+        SumTotalPrice()
+
+    })
+
+	//一个复选款对全选复选框的影响
+	$('.checkGoods').change(function () {
+		//改变之后，查看当前选中状态是否是全部选中
+		allCount = $('.cart_list_td').find(':checkbox').length
+		checkedCount = $('.cart_list_td').find(':checked').length
+		//比较
+		if (allCount == checkedCount){
+		    $('#allCheck').prop("checked","checked")
+		}else {
+            $('#allCheck').prop("checked","")
+        }
+
+        //计算总价
+        SumTotalPrice()
+
+    })
+
+	//计算总价和总件数
+	function SumTotalPrice() {
+		//获取选中的复选框所在行的小计
+		totalPrice = 0
+		$('.cart_list_td').find(':checked').each(function () {
+			price = $(this).parents('ul').find('.col07').text()
+			totalPrice += parseInt(price)
+        })
+
+		//把总价放回显示总价的地方
+		$('.settlements').children('.col03').children('em').text(totalPrice.toFixed(2)+'元')
+    }
+
+    SumTotalPrice()
+
+	//添加购物车数量
+	$('.add').click(function () {
+		count = $(this).next().val()
+		count = parseInt(count) + 1
+		goodsId = $(this).next().attr("goodsId")
+
+		param = {"count":count,"goodsId":goodsId}
+		//等后台处理成功，再修改显示
+
+		//添加更新是否成功标识
+		errUpdate = true
+		//设置ajax异步状态
+		$.ajaxSettings.async = false
+		$.post("/upCart",param,function (data) {
+			if(data.errno != 5){
+			    alert(data.errmsg)
+			}else{
+			   errUpdate = false
+			}
+        })
+        $.ajaxSettings.async = true
+
+		if(!errUpdate){
+		    $(this).next().val(count)
+		}
+
+        //计算小计
+        price = $(this).parents("ul").children(".col05").text()
+        price = parseFloat(price)
+
+        littlePrice = price * count
+        $(this).parents('ul').children(".col07").text(littlePrice+"元")
+        SumTotalPrice()
+    })
+
+    //减少购物车商品数量
+    $('.minus').click(function () {
+        //让购物车数量减一操作
+        count = $(this).prev().val()
+        count = parseInt(count) - 1
+        if (count <= 1){
+            count = 1
+        }
+
+        goodsId = $(this).prev().attr("goodsId")
+
+        param = {"count":count,"goodsId":goodsId}
+
+        //给后台发送请求
+        //加标识，确定后台更新是否成功
+        errUpdate = true
+        //设置ajax同步状态
+        $.ajaxSettings.async = false
+
+        $.post("/upCart",param,function (data) {
+            if(data.errno!=5){
+                alert(data.errmsg)
+            }else{
+                errUpdate = false
+            }
+        })
+
+        $.ajaxSettings.async = true
+        if(!errUpdate){
+            $(this).prev().val(count)
+        }
+        //计算小计
+        price = $(this).parents("ul").children(".col05").text()
+        price = parseFloat(price)
+
+        littlePrice = price * count
+        $(this).parents('ul').children(".col07").text(littlePrice+"元")
+
+        SumTotalPrice()
+    })
+
+    //找标签，找事件
+    oldCount = 0
+    $('.num_show').focus(function () {
+        oldCount = $(this).val()
+        oldCount = parseInt(oldCount)
+    })
+
+    //找标签，找事件，写方法
+    $('.num_show').blur(function () {
+        //获取输入的数量，再redis中修改
+        count = $(this).val()
+        if(isNaN(count) || count.trim().length == 0 || parseInt(count) <= 0){
+            $(this).val(oldCount)
+            return
+        }
+        goodsId = $(this).attr("goodsId")
+
+        param = {"count":count,"goodsId":goodsId}
+        $.post("/upCart",param,function () {
+
+        })
+    })
+
+	//删除购物车数量
+	$('.delete').click(function () {
+
+	    if(!confirm("是否确认删除")){
+	        return false
+		}
+
+		goodsId = $(this).parents("ul").children('.col06').find('.num_show').attr("goodsId")
+
+		param = {"goodsId":goodsId}
+
+		//ajax异步状态设置
+		errUpdate = true
+		$.ajaxSettings.async = false
+
+		$.post("/deleteCart",param,function (data) {
+			if(data.errno != 5){
+			    alert(data.errmsg)
+			}else{
+				errUpdate = false
+			}
+        })
+
+		$.ajaxSettings.async = true
+		if(!errUpdate){
+			$(this).parents("ul").remove()
+		}
+		SumTotalPrice()
+    })
+
+</script>
 	
 </body>
 </html>
