--- a/pyg/views/index_sx.html
+++ b/pyg/views/index_sx.html
@@ -26,7 +26,7 @@
 					<span>|</span>
 					<a href="user_center_info.html">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="/user/showCart">我的购物车</a>
 					<span>|</span>
 					<a href="user_center_order.html">我的订单</a>
 				</div>
@@ -36,10 +36,12 @@
 
 	<div class="search_bar clearfix">
 		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+		<form method="post" action="/search">
 		<div class="search_con fl">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
+			<input type="text" class="input_text fl" name="goodsName" placeholder="搜索商品">
+			<input type="submit" class="input_btn fr" name="" value="搜索">
 		</div>
+        </form>
 		<div class="guest_cart fr">
 			<a href="#" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl" id="show_count">10</div>
@@ -62,7 +64,7 @@
 	<div class="center_con clearfix">
 		<ul class="subnav fl">
 			{{range .goodsTypes}}
-			<li><a href="#model01" class="{{.Logo}}">{{.Name}}</a></li>
+			<li><a href="/goodsType?id={{.Id}}" class="{{.Logo}}">{{.Name}}</a></li>
 			{{end}}
 		</ul>
 		<div class="slide fl">
@@ -99,8 +101,8 @@
 			<ul class="goods_list fl">
 				{{range .imageGoods}}
 				<li>
-					<h4><a href="#">{{.GoodsSKU.Name}}</a></h4>
-					<a href="#"><img src="http://192.168.179.65:8888/{{.GoodsSKU.Image}}"></a>
+					<h4><a href="/goodsDetail?Id={{.GoodsSKU.Id}}">{{.GoodsSKU.Name}}</a></h4>
+					<a href="/goodsDetail?Id={{.GoodsSKU.Id}}"><img src="http://192.168.179.65:8888/{{.GoodsSKU.Image}}"></a>
 					<div class="prize">¥ {{.GoodsSKU.Price}}</div>
 				</li>
 				{{end}}
