--- a/pyg/views/place_order.html
+++ b/pyg/views/place_order.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>品优购，优质！优质！-提交订单</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 </head>
 <body>
 	<div class="header_con">
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
+		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;提交订单</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -45,7 +45,9 @@
 	<div class="common_list_con clearfix">
 		<dl>
 			<dt>寄送到：</dt>
-			<dd><input type="radio" name="" checked="">北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
+			{{range .addrs}}
+			<dd><input type="radio" name="address" value="{{.Id}}" {{if compare .IsDefault true}}checked{{end}}>{{.Addr}} （{{.Receiver}} 收） {{.Phone}}</dd>
+			{{end}}
 		</dl>
 		<a href="user_center_site.html" class="edit_site">编辑收货地址</a>
 
@@ -54,13 +56,13 @@
 	<h3 class="common_title">支付方式</h3>	
 	<div class="common_list_con clearfix">
 		<div class="pay_style_con clearfix">
-			<input type="radio" name="pay_style" checked>
+			<input type="radio" name="pay_style" checked value="1">
 			<label class="cash">货到付款</label>
-			<input type="radio" name="pay_style">
+			<input type="radio" name="pay_style" value="2">
 			<label class="weixin">微信支付</label>
-			<input type="radio" name="pay_style">
+			<input type="radio" name="pay_style" value="3">
 			<label class="zhifubao"></label>
-			<input type="radio" name="pay_style">
+			<input type="radio" name="pay_style" value="4">
 			<label class="bank">银行卡支付</label>
 		</div>
 	</div>
@@ -75,38 +77,31 @@
 			<li class="col04">数量</li>
 			<li class="col05">小计</li>		
 		</ul>
+		{{range .goods}}
 		<ul class="goods_list_td clearfix">
 			<li class="col01">1</li>			
-			<li class="col02"><img src="images/goods/goods012.jpg"></li>
-			<li class="col03">奇异果</li>
-			<li class="col04">500g</li>
-			<li class="col05">25.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">25.80元</li>	
+			<li class="col02"><img src="http://192.168.179.65:8888/{{.goodsSku.Image}}"></li>
+			<li class="col03">{{.goodsSku.Name}}</li>
+			<li class="col04">{{.goodsSku.Unite}}</li>
+			<li class="col05">{{.goodsSku.Price}}元</li>
+			<li class="col06">{{.count}}</li>
+			<li class="col07">{{.littlePrice}}元</li>
 		</ul>
-		<ul class="goods_list_td clearfix">
-			<li class="col01">2</li>			
-			<li class="col02"><img src="images/goods/goods003.jpg"></li>
-			<li class="col03">大兴大棚草莓</li>
-			<li class="col04">500g</li>
-			<li class="col05">16.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">16.80元</li>	
-		</ul>
+		{{end}}
 	</div>
 
 	<h3 class="common_title">总金额结算</h3>
 
 	<div class="common_list_con clearfix">
 		<div class="settle_con">
-			<div class="total_goods_count">共<em>2</em>件商品，总金额<b>42.60元</b></div>
+			<div class="total_goods_count">共<em>{{.totalCount}}</em>件商品，总金额<b>{{.totalPrice}}元</b></div>
 			<div class="transit">运费：<b>10元</b></div>
-			<div class="total_pay">实付款：<b>52.60元</b></div>
+			<div class="total_pay">实付款：<b>{{.truePrice}}元</b></div>
 		</div>
 	</div>
 
 	<div class="order_submit clearfix">
-		<a href="javascript:;" id="order_btn">提交订单</a>
+		<a href="javascript:;" id="order_btn" goodsIds="{{.goodsIds}}">提交订单</a>
 	</div>	
 
 	<div class="py-container copyright footer">
@@ -132,20 +127,45 @@
 		
 		<div class="mask"></div>
 	</div>
-	<script type="text/javascript" src="js/jquery-1.12.2.js"></script>
+	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript">
 		$('#order_btn').click(function() {
-			localStorage.setItem('order_finish',2);
+		    //点击提交订单，把当前页面数据传递到后台，让后台插入
+			addrId = $('input[name="address"]:checked').val()
+			//获取支付方式
+			payId = $('input[name="pay_style"]:checked').val()
 
-			$('.popup_con').fadeIn('fast', function() {
+			//获取商品信息
+			goodsIds = $(this).attr("goodsIds")
 
-				setTimeout(function(){
-					$('.popup_con').fadeOut('fast',function(){
-						window.location.href = 'index.html';
-					});	
-				},3000)
-				
-			});
+			//获取总金额和总件数
+			totalCount = $(".common_list_con").find(".total_goods_count").children("em").text()
+            totalPrice = $(".common_list_con").find(".total_goods_count").children("b").text()
+
+			totalCount = parseInt(totalCount)
+			totalPrice = parseFloat(totalPrice)
+
+            param = {"addrId":addrId,"payId":payId,"goodsIds":goodsIds,"totalCount":totalCount,"totalPrice":totalPrice}
+
+            $.post("/pushOrder",param,function (data) {
+				if(data.errno != 5){
+				    alert(data.errmsg)
+				}else {
+                    localStorage.setItem('order_finish',2);
+
+                    $('.popup_con').fadeIn('fast', function() {
+
+                        setTimeout(function(){
+                            $('.popup_con').fadeOut('fast',function(){
+                                window.location.href = 'index.html';
+                            });
+                        },3000)
+
+                    });
+				}
+            })
+
+
 		});
 	</script>
 </body>
