--- a/pyg/views/user_center_order.html
+++ b/pyg/views/user_center_order.html
@@ -1,72 +1,41 @@
 
-		<div class="right_content clearfix">
-				<h3 class="common_title2">全部订单</h3>
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">未支付</li>		
-				</ul>
+<div class="right_content clearfix">
+    <h3 class="common_title2">全部订单</h3>
+{{range .orders}}
+    <ul class="order_list_th w978 clearfix">
+        <li class="col01">{{.orderInfo.Time.Format "2006-01-02 15:04:05"}}</li>
+        <li class="col02">订单号：{{.orderInfo.OrderId}}</li>
+        <li class="col02 stress">{{if compare .orderInfo.Orderstatus 0}}未支付{{else}}已支付{{end}}</li>
+    </ul>
 
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
-							<td width="15%">待付款</td>
-							<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
-						</tr>
-					</tbody>
-				</table>
-				
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">已支付</li>			
-				</ul>
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
-							<td width="15%">已付款</td>
-							<td width="15%"><a href="#" class="oper_btn">查看物流</a></td>
-						</tr>
-					</tbody>
-				</table>
+    <table class="order_list_table w980">
+        <tbody>
+        <tr>
+            <td width="55%">
+			{{range .orderGoods}}
+                <ul class="order_goods_list clearfix">
+                    <li class="col01"><img src="http://192.168.179.65:8888/{{.GoodsSKU.Image}}"></li>
+                    <li class="col02">{{.GoodsSKU.Name}}<em>{{.GoodsSKU.Price}}元/{{.GoodsSKU.Unite}}</em></li>
+                    <li class="col03">{{.Count}}</li>
+                    <li class="col04">{{.Price}}元</li>
+                </ul>
+			{{end}}
+            </td>
+            <td width="15%">{{.orderInfo.TotalPrice}}元</td>
+            <td width="15%">{{if compare .orderInfo.Orderstatus 0}}待付款{{else}}已付款{{end}}</td>
+            <td width="15%">{{if compare .orderInfo.Orderstatus 0}}<a href="/pay?orderId={{.orderInfo.Id}}" class="oper_btn">去付款</a>{{else}}<a href="#" class="oper_btn">查看物流</a>{{end}}</td>
+        </tr>
+        </tbody>
+    </table>
+{{end}}
 
-				<div class="pagenation">
-					<a href="#"><上一页</a>
-					<a href="#" class="active">1</a>
-					<a href="#">2</a>
-					<a href="#">3</a>
-					<a href="#">4</a>
-					<a href="#">5</a>
-					<a href="#">下一页></a>
-				</div>
-		</div>
+    <div class="pagenation">
+        <a href="#"><上一页</a>
+        <a href="#" class="active">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">下一页></a>
+    </div>
+</div>
